--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ Django==5.1.4
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+packaging==24.2
 pillow==11.1.0
 reportlab==4.3.0
+SQLAlchemy==2.0.37
 sqlparse==0.5.3
 typing_extensions==4.12.2
 Werkzeug==3.1.3
