--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,47 @@
+arabic-reshaper==3.0.0
 asgiref==3.8.1
+asn1crypto==1.5.1
 blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.0
+cssselect2==0.7.0
 Django==5.1.4
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==23.0.0
+html5lib==1.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+lxml==5.3.1
 MarkupSafe==3.0.2
+oscrypto==1.3.0
 packaging==24.2
 pillow==11.1.0
+pycparser==2.22
+pyHanko==0.25.3
+pyhanko-certvalidator==0.26.5
+pypdf==5.3.0
+python-bidi==0.6.3
+PyYAML==6.0.2
+qrcode==8.0
 reportlab==4.3.0
+requests==2.32.3
+six==1.17.0
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
+svglib==1.5.1
+tinycss2==1.4.0
 typing_extensions==4.12.2
+tzlocal==5.2
+uritools==4.0.3
+urllib3==2.3.0
+webencodings==0.5.1
 Werkzeug==3.1.3
+xhtml2pdf==0.2.16
